actix-web-codegen/tests/trybuild/route-duplicate-method-fail.stderr
error: HTTP method defined more than once: `GET`
 --> tests/trybuild/route-duplicate-method-fail.rs:3:35
  |
3 | #[route("/", method="GET", method="GET")]
  |                                   ^^^^^

error[E0277]: the trait bound `fn() -> impl std::future::Future<Output = String> {index}: HttpServiceFactory` is not satisfied
   --> tests/trybuild/route-duplicate-method-fail.rs:12:55
    |
12  |     let srv = actix_test::start(|| App::new().service(index));
    |                                               ------- ^^^^^ the trait `HttpServiceFactory` is not implemented for `fn() -> impl std::future::Future<Output = String> {index}`
    |                                               |
    |                                               required by a bound introduced by this call
    |
note: required by a bound in `App::<T>::service`
   --> $WORKSPACE/actix-web/src/app.rs
    |
    |         F: HttpServiceFactory + 'static,
    |            ^^^^^^^^^^^^^^^^^^ required by this bound in `App::<T>::service`
